Commit#3 -configurando o views.py da aplicação home.

--- a/home/templates/fragments/carousel.html
+++ b/home/templates/fragments/carousel.html
@@ -1,12 +1,12 @@
 {% load static %}
-<div class="container-flex px-0">
+<div class="container-fluid px-0">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner primeiro">
             <div class="carousel-item active primeiro">
-                <video class="img-fluid" autoplay loop muted>
-                    <source class="video video-fluid" src="./static/home/video6.mp4" type="video/mp4"/>
+                <video class="video-fluid" autoplay loop muted>
+                    <source class="video-fluid" src="./static/home/video6.mp4" type="video/mp4"/>
                 </video>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-md-block">
                     <h1 class="text-black">Bem vindo</h1>
                     <h4 class="text-black">
                         Ao melhor pesqueiro da cidade.
