--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -33,108 +33,140 @@
 <main>
     <div class="container-fluid px-0 pb-5">
         {% include 'fragments/carousel.html' %}
-    </div>
-    <div class="container">
-        <div class="row justify-content-center pb-5 py-2">
-            <div class="col-lg-9">
-                <h1>Sobre</h1>
-                <h6> O pesqueiro tem o objetivo de proporcionar momentos maravilhosos
-                    para aproveitar com a família e os amigos. Seja para marcar aquela pesca top ou
-                    para quem gosta de apreciar um bom petisco e pratos elaborados,
-                    uma cerveja gelada, drinks maravilhosos e uma boa música.
-                    Para os pescadores temos uma variedade de espécies de peixes. Aqui quem escolhe é você, pesca
-                    esportiva ou pesque-pague.
-                </h6>
+        <div class="container">
+
+            <div class="row justify-content-center pb-5 py-2">
+                <div class="col-lg-12 ">
+                    <h1>Sobre</h1>
+                    <h6> O pesqueiro tem o objetivo de proporcionar momentos maravilhosos
+                        para aproveitar com a família e os amigos. Seja para marcar aquela pesca top ou
+                        para quem gosta de apreciar um bom petisco e pratos elaborados,
+                        uma cerveja gelada, drinks maravilhosos e uma boa música.
+                        Para os pescadores temos uma variedade de espécies de peixes. Aqui quem escolhe é você, pesca
+                        esportiva ou pesque-pague.
+                    </h6>
 
 
-                <div id="carouselExampleFade" class="carousel slide carousel-fade ">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="3"
-                                aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="4"
-                                aria-label="Slide 5"></button>
-                        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="5"
-                                aria-label="Slide 6"></button>
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="5"
+                                    aria-label="Slide 6"></button>
+                        </div>
+
+                        <div class="carousel-inner py-4">
+                            <div class="carousel-item active">
+                                <img src="{% static 'home/petisco.jpg' %}" class="d-block w-100 img-fluid "
+                                     alt="imagem-1">
+                                <div class="carousel-caption d-md-block">
+                                    <h3 class="">Os melhores petiscos e pratos</h3>
+                                    <h5>Você encontra aqui!</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{% static 'home/peixe-3.jpg' %}" class="d-block w-100 img-fluid"
+                                     alt="imagem-2">
+                                <div class="carousel-caption d-md-block">
+                                    <h3 class>Vai um peixinho aí?</h3>
+                                    <h5>Você pescador é o nosso convidado!</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{% static 'home/peixe-1.jpg' %}" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption d-md-block">
+                                    <h3>Que tal marcar aquela pesca?</h3>
+                                    <h5>Aqui temos pesca esportiva e pesque-pague</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{% static 'home/cerveja.jpg' %}" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption  d-md-block">
+                                    <h3>Sabe aquela cerveja trincando?</h3>
+                                    <h5>Você encontra aqui no bar restaurante do pesqueiro</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{% static 'home/pesca--1.jpg' %}" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h3>Entre em contato e faça a sua reserva</h3>
+                                    <h5>Estamos esperando ansiosos por você</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
 
-                    <div class="carousel-inner py-4">
-                        <div class="carousel-item active">
-                            <img src="{% static 'home/petisco.jpg' %}" class="d-block w-100 img-fluid "
-                                 alt="imagem-1">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3 class="">Os melhores petiscos e pratos</h3>
-                                <h5>Você encontra aqui!</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{% static 'home/peixe-3.jpg' %}" class="d-block w-100 img-fluid"
-                                 alt="imagem-2">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3 class>Vai um peixinho aí?</h3>
-                                <h5>Você pescador é o nosso convidado!</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{% static 'home/peixe-1.jpg' %}" class="d-block w-100 img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>Que tal marcar aquela pesca?</h3>
-                                <h5>Aqui temos pesca esportiva e pesque-pague</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{% static 'home/cerveja.jpg' %}" class="d-block w-100 img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>Sabe aquela cerveja trincando?</h3>
-                                <h5>Você encontra aqui no bar restaurante do pesqueiro</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="{% static 'home/pesca--1.jpg' %}" class="d-block w-100 img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>Entre em contato e faça a sua reserva</h3>
-                                <h5>Estamos esperando ansiosos por você</h5>
+                    <div class="bg-warning my-3 justify-content-center">
+                        <h3>Confira as promoções e novidades</h3>
+                    </div>
+                    <div class="card vh-75 vw-10">
+                        <ul>
+                            {% for post in promocao %}
+                            <li class="col-md-12 py-4">
+                                <h4>{{ post.titulo }}</h4>
+                                <img srcset="{{post.image_capa.url}}" class="card-img-top justify-content-center"
+                                     alt="imagem do card"></a>
+                                <h6>{{ post.conteudo }}</h6>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+
+                    <div class="bg-light ">
+                        <div class="container">
+                            <div class="col-xl-12 col-md-12">
+                                <!--Formulario-->
+                                <form method="post">
+                                    <!--Para segurança -->
+                                    {% csrf_token %}
+                                    <div class="card border-0 px-sm-0 p-md-5 mt-3">
+                                        {% if mesages %}
+                                        {% for message in messages %}
+                                        {% if message.tags %}
+                                        <div class="alert alert-sucess" role="alert">
+                                            {{ message }}
+                                        </div>
+                                        {% endif %}
+                                        {% endfor %}
+                                        {% endif %}
+                                        <div class="card-head bg-white border-0">
+                                            <h5>Ficamos a disposição para esclarecimento de eventuais dúvidas:</h5>
+                                            <h2 class="text-black text-center">Contato</h2>
+                                        </div>
+
+                                        {{ form }}
+
+                                        <div class="card-footer p-0 pt-3 bg-white border-0">
+                                            <button type="submit" class="btn btn-success col-12">Enviar mensagem
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                            data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                            data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
-
-                <div class="bg-warning my-3 justify-content-center">
-                    <h3>Confira as promoções e novidades</h3>
-                </div>
-                <div class="card vh-75 vw-10">
-                    <ul>
-                        {% for post in promocao %}
-                        <li class="col-md-12 py-4">
-                            <h4>{{ post.titulo }}</h4>
-                            <img srcset="{{post.image_capa.url}}" class="card-img-top justify-content-center"
-                                 alt="imagem do card"></a>
-                            <h6>{{ post.conteudo }}</h6>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-
             </div>
         </div>
     </div>
-    </div>
-
 </main>
 <footer>
     {% include 'fragments/footer.html' %}
